played around with the galilean cannon, newton's cradle systems, added pyramid system

--- a/grav.html
+++ b/grav.html
@@ -38,7 +38,9 @@
             <option value='5'>51 Pegasi System</option>
             <option value='6'>47 Ursae Majoris System</option>
             <option value='7'>Upsilon Andromidae System</option>
-            <option value='8'>Other</option>
+            <option value='8'>Pyramid</option>
+            <option value='10'>Galilean Gravity Cannon</option>
+            <option value='11'>Newton's Gravity Cradle</option>
             <option value='9'>Empty</option>
         </select>
         <h3>Mouse</h3>
