Added a basic saving of state with JSON-encoded url hash

--- a/grav.html
+++ b/grav.html
@@ -43,6 +43,7 @@
             <option value='11'>Newton's Gravity Cradle</option>
             <option value='9'>Empty</option>
         </select>
+        <button id='geturl' title='NOTE: Will generate a long URL!'>Get URL</button>
         <h3>Mouse</h3>
         <p>Use the scroll wheel and (shift) left-click!</p>
         <h3>Keyboard</h3>
