--- a/test.html
+++ b/test.html
@@ -12,6 +12,9 @@
         Array.prototype.rotatez = function(angle) {
             return [this[0]*Math.cos(angle) - this[1]*Math.sin(angle), this[0]*Math.sin(angle) + this[1]*Math.cos(angle), this[2]];
         }
+        Array.prototype.add = function(vect2) {
+            return [this[0]+vect2[0], this[1]+vect2[1], this[2]+vect2[2]];
+        }
         window.onload = function() {
             primary = document.getElementById('primary').getContext('2d');
             secondary = document.getElementById('secondary').getContext('2d');
@@ -39,18 +42,16 @@
             xvect = [100,0,0];
             yvect = [0,100,0];
             zvect = [0,0,100];
+            a1vect = [100, 100, 0];
+            a2vect = [0, 100, 100];
+            a3vect = [100, 0, 100];
+            a4vect = [100, 100, 100];
+            origin = [400, 400, 0];
+            zadd = 0;
             xdeg = 0;
             ydeg = 0;
             zdeg = 0;
             drawLines(primary);
-            var gradient1 = primary.createLinearGradient(100,100,200,100);
-            gradient1.addColorStop(0, '#ff0');
-            gradient1.addColorStop(0.5, '#000');
-            var gradient2 = primary.createLinearGradient(0,0,100,0);
-            gradient2.addColorStop(0, '#f0f');
-            gradient2.addColorStop(1, '#000');
-            drawLine(100,100,200,100,10,gradient1,primary);
-            drawLine(200,200,300,200,10,gradient2,primary);
             document.onkeypress = pageEvents;
         };
         function pageEvents(ev) {
@@ -64,17 +65,48 @@
             if (ekey == 115) {
                 zdeg += 1/36;
             }
+            if (ekey == 98) {
+                origin[2] += 10;
+            }
+            if (ekey == 99) {
+                origin[2] -= 10;
+            }
             drawLines(primary);
         }
         function drawLines(primary) {
-            var x2vect = xvect.rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
-            var y2vect = yvect.rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
-            var z2vect = zvect.rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            var x2vect = xvect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            var y2vect = yvect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            var z2vect = zvect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            var a12vect = a1vect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            var a22vect = a2vect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            var a32vect = a3vect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            var a42vect = a4vect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            var origin2 = origin.rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
             primary.fillStyle = '#000';
             primary.fillRect(0,0,1300,600);
-            drawLine(x2vect[0] + 400, x2vect[1] + 400, 400, 400, 10, '#f00', primary);
-            drawLine(y2vect[0] + 400, y2vect[1] + 400, 400, 400, 10, '#0f0', primary);
-            drawLine(z2vect[0] + 400, z2vect[1] + 400, 400, 400, 10, '#00f', primary);
+            drawLine(x2vect[0], x2vect[1], origin2[0], origin2[1], 10, '#f00', primary);
+            drawLine(y2vect[0], y2vect[1], origin2[0], origin2[1], 10, '#0f0', primary);
+            drawLine(z2vect[0], z2vect[1], origin2[0], origin2[1], 10, '#00f', primary);
+            drawLine(a12vect[0], a12vect[1], x2vect[0], x2vect[1], 10, '#ff0', primary);
+            drawLine(a12vect[0], a12vect[1], y2vect[0], y2vect[1], 10, '#ff0', primary);
+            drawLine(a22vect[0], a22vect[1], y2vect[0], y2vect[1], 10, '#0ff', primary);
+            drawLine(a22vect[0], a22vect[1], z2vect[0], z2vect[1], 10, '#0ff', primary);
+            drawLine(a22vect[0], a22vect[1], a42vect[0], a42vect[1], 10, '#ff0', primary);
+            drawLine(z2vect[0], z2vect[1], a32vect[0], a32vect[1], 10, '#0ff', primary);
+            drawLine(a32vect[0], a32vect[1], a42vect[0], a42vect[1], 10, '#0ff', primary);
+            drawLine(a32vect[0], a32vect[1], x2vect[0], x2vect[1], 10, '#0ff', primary);
+            drawLine(a42vect[0], a42vect[1], a12vect[0], a12vect[1], 10, '#0ff', primary)
+            otherDrawing(primary);
+        }
+        function otherDrawing(primary) {
+            var gradient1 = primary.createLinearGradient(100,100,200,100);
+            gradient1.addColorStop(0, '#ff0');
+            gradient1.addColorStop(0.5, '#000');
+            var gradient2 = primary.createLinearGradient(200,200,300,200);
+            gradient2.addColorStop(0, '#ff0');
+            gradient2.addColorStop(1, '#000');
+            drawLine(100,100,200,100,10,gradient1,primary);
+            drawLine(200,200,300,200,10,gradient2,primary);
         }
         function drawLine(x, y, oldx, oldy, radius, color, paper) {
             paper.lineWidth = .2*radius;
