playing around with 3D field of bodies

--- a/test.html
+++ b/test.html
@@ -15,6 +15,10 @@
         Array.prototype.add = function(vect2) {
             return [this[0]+vect2[0], this[1]+vect2[1], this[2]+vect2[2]];
         }
+        Array.prototype.scale = function(factor) {
+            factor = 1/factor;
+            return [this[0]*factor, this[1]*factor, this[2]*factor];
+        }
         window.onload = function() {
             primary = document.getElementById('primary').getContext('2d');
             secondary = document.getElementById('secondary').getContext('2d');
@@ -39,6 +43,7 @@
                 primary.drawImage(secondary.canvas, 0, 0, 1300 * (10000 + i * 10), 600 * (10000 + i * 10));
             }
             */
+            /*
             xvect = [100,0,0];
             yvect = [0,100,0];
             zvect = [0,0,100];
@@ -46,56 +51,95 @@
             a2vect = [0, 100, 100];
             a3vect = [100, 0, 100];
             a4vect = [100, 100, 100];
+            */
             origin = [400, 400, 0];
             zadd = 0;
             xdeg = 0;
             ydeg = 0;
             zdeg = 0;
-            drawLines(primary);
+            //drawLines(primary);
+            bodies = [];
+            for (var i = 100; i--;) {
+                bodies[i] = {0:[randInt(1200), randInt(1200), randInt(1200)], c:'rgb(' + randInt(255) + ',' + randInt(255) + ',' + randInt(255) + ')'};
+            }
+            console.log(bodies[0][0]);
+            drawBodies(primary);
             document.onkeypress = pageEvents;
         };
         function pageEvents(ev) {
             var ekey = ev.which;
             if (ekey == 97) {
-                xdeg += 1/36;
+                xdeg += Math.PI/36;
             }
             if (ekey == 100) {
-                ydeg += 1/36;
+                zdeg += Math.PI/36;
             }
             if (ekey == 115) {
-                zdeg += 1/36;
+                ydeg += Math.PI/36;
             }
             if (ekey == 98) {
                 origin[2] += 10;
+                zadd += 10;
             }
             if (ekey == 99) {
                 origin[2] -= 10;
+                zadd -= 10;
             }
-            drawLines(primary);
+            //drawLines(primary);
+            drawBodies(primary);
+        }
+        function drawBodies(primary) {
+            primary.fillStyle = '#000';
+            primary.fillRect(0,0,1300,600);
+            //bodies.sort(comparez);
+            var position2, position1;
+            for (var i = bodies.length; i--;) {
+                var position = bodies[i][0].rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+                //console.log(position);
+                var scale = (600+position[1]+zadd)/600;
+                //console.log(scale);
+                if (scale > 0) {
+                    position = position.scale(scale);
+                    drawBody(position[0]+600, position[2]+300, 10/scale, bodies[i].c, primary);
+                }
+            }
+            otherDrawing(primary);
+        }
+        function comparez(a,b) {
+            return (a[0][1]-b[0][1]);
         }
         function drawLines(primary) {
             var x2vect = xvect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            x2vect = x2vect.scale(((1300+x2vect[2])/1300));
             var y2vect = yvect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            y2vect = y2vect.scale(((1300+y2vect[2])/1300));
             var z2vect = zvect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            z2vect = z2vect.scale(((1300+z2vect[2])/1300));
             var a12vect = a1vect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            a12vect = a12vect.scale(((1300+a12vect[2])/1300));
             var a22vect = a2vect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            a22vect =  a22vect.scale(((1300+a22vect[2])/1300));
             var a32vect = a3vect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            a32vect = a32vect.scale(((1300+a32vect[2])/1300));
             var a42vect = a4vect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            a42vect = a42vect.scale(((1300+a42vect[2])/ 1300));
             var origin2 = origin.rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
+            origin2 = origin2.scale(((1300+origin2[2])/1300));
             primary.fillStyle = '#000';
             primary.fillRect(0,0,1300,600);
+            drawBody(origin[0], origin[1], 10, '#fff', primary);
             drawLine(x2vect[0], x2vect[1], origin2[0], origin2[1], 10, '#f00', primary);
             drawLine(y2vect[0], y2vect[1], origin2[0], origin2[1], 10, '#0f0', primary);
             drawLine(z2vect[0], z2vect[1], origin2[0], origin2[1], 10, '#00f', primary);
-            drawLine(a12vect[0], a12vect[1], x2vect[0], x2vect[1], 10, '#ff0', primary);
-            drawLine(a12vect[0], a12vect[1], y2vect[0], y2vect[1], 10, '#ff0', primary);
-            drawLine(a22vect[0], a22vect[1], y2vect[0], y2vect[1], 10, '#0ff', primary);
-            drawLine(a22vect[0], a22vect[1], z2vect[0], z2vect[1], 10, '#0ff', primary);
-            drawLine(a22vect[0], a22vect[1], a42vect[0], a42vect[1], 10, '#ff0', primary);
-            drawLine(z2vect[0], z2vect[1], a32vect[0], a32vect[1], 10, '#0ff', primary);
-            drawLine(a32vect[0], a32vect[1], a42vect[0], a42vect[1], 10, '#0ff', primary);
-            drawLine(a32vect[0], a32vect[1], x2vect[0], x2vect[1], 10, '#0ff', primary);
-            drawLine(a42vect[0], a42vect[1], a12vect[0], a12vect[1], 10, '#0ff', primary)
+            drawLine(a12vect[0], a12vect[1], x2vect[0], x2vect[1], 10, '#fff', primary);
+            drawLine(a12vect[0], a12vect[1], y2vect[0], y2vect[1], 10, '#fff', primary);
+            drawLine(a22vect[0], a22vect[1], y2vect[0], y2vect[1], 10, '#fff', primary);
+            drawLine(a22vect[0], a22vect[1], z2vect[0], z2vect[1], 10, '#fff', primary);
+            drawLine(a22vect[0], a22vect[1], a42vect[0], a42vect[1], 10, '#fff', primary);
+            drawLine(z2vect[0], z2vect[1], a32vect[0], a32vect[1], 10, '#fff', primary);
+            drawLine(a32vect[0], a32vect[1], a42vect[0], a42vect[1], 10, '#fff', primary);
+            drawLine(a32vect[0], a32vect[1], x2vect[0], x2vect[1], 10, '#fff', primary);
+            drawLine(a42vect[0], a42vect[1], a12vect[0], a12vect[1], 10, '#fff', primary)
             otherDrawing(primary);
         }
         function otherDrawing(primary) {
@@ -120,6 +164,15 @@
         }
         function randInt(limit) {
             return Math.floor(Math.random() * limit);
+        }
+        function drawBody(x, y, r, color, paper) {
+            paper.strokeStyle = '#ccc';
+            paper.beginPath();
+            paper.arc(x, y, r, 0, Math.PI * 2, 1);
+            paper.closePath();
+            paper.fillStyle = color;
+            paper.stroke();
+            paper.fill();
         }
     </script>
 </head>
