--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-My GitHub Page
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Grav - Canvas</title>
+    <script type='text/javascript' src='grav-runge-kutta.js'></script>
+    <style>h3 {color:#ccf;}</style>
+</head>
+<body style='background-color:#000; color:#fff'>
+    <div id='instructions' style='width:150px;position:absolute;top:0;left:0;z-index:1;'>
+        <span id='bodyCount' style='font-size:12px'></span>
+        <br />
+        <span id='energy' style='font-size:12px'></span>
+        <br />
+        <h3>View Box</h3>
+        <span id='viewx'>X: 0</span>
+        <br />
+        <span id='viewy'>Y: 0</span>
+        <br />
+        <span id='viewidth'>Width: 1200000</span>
+        <br />
+        <span id='viewheight'>Height: 600000</span>
+        <br />
+        <span style='font-size:12px;'>Try me in full-screen!</span>
+        <br />
+        <h3>New Body</h3>
+        <span>Mass</span>
+        <br />
+        <input id='newmass' type='text' value='1e28' style='width:100px; background-color:transparent; color:#fff; border:1px solid #fff;'/>
+        <br />
+        <span>Select System</span>
+        <br />
+        <select id='choosebody' style='width: 100px; background-color:#000; color:#fff; border:0 none;'>
+            <option value='0'>Solar System</option>
+            <option value='1'>Two-Body System</option>
+            <option value='2'>Four-Body System</option>
+            <option value='3'>Gliese 876 System</option>
+            <option value='4'>55 Cancri System</option>
+            <option value='5'>51 Pegasi System</option>
+            <option value='6'>47 Ursae Majoris System</option>
+            <option value='7'>Upsilon Andromidae System</option>
+            <option value='8'>Pyramid</option>
+            <option value='10'>Galilean Gravity Cannon</option>
+            <option value='11'>Newton's Gravity Cradle</option>
+            <option value='9'>Empty</option>
+        </select>
+        <button id='geturl' title='NOTE: Will generate a long URL!'>Get URL</button>
+        <h3>Mouse</h3>
+        <p>Use the scroll wheel and (shift) left-click!</p>
+        <h3>Keyboard</h3>
+        <p>Move: W,A,S,D</p>
+        <p>Zoom: <u>I</u>n,<u>O</u>ut</p>
+        <p><u>P</u>ause</p>
+        <p><u>T</u>race, <u>L</u>ess, <u>M</u>ore</p>
+        <p><u>F</u>licker: <span id='flicker'>On</span></p>
+        <p><u>B</u>ounce: <span id='bounce'>On</span></p>
+        <p>Show/Hide: Q</p>
+    </div>
+    <canvas id='canvas' width='1300' height='600' style='border:1px solid #050505;position:absolute;top:0;left:0;'>
+    </canvas>
+    <canvas id='transition' width='1300' height='600' style='display:none'>
+    </canvas>
+</body>
+</html>
