--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body style='background-color:#000; color:#fff'>
     <div id='instructions' style='width:150px;position:absolute;top:0;left:0;z-index:1;'>
+        <a href='http://rsanchez1.github.com/Grav/' style='font-size:12px'>Source</a>
+        <br />
         <span id='bodyCount' style='font-size:12px'></span>
         <br />
         <span id='energy' style='font-size:12px'></span>
