--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style='background-color:#000; color:#fff'>
     <div id='instructions' style='width:150px;position:absolute;top:0;left:0;z-index:1;'>
-        <a href='http://github.com/rsanchez1/Grav/' style='font-size:12px; color:#fff'>Source</a>
+        <a href='http://github.com/rsanchez1/Grav/' target='_blank' style='font-size:12px; color:#fff'>Source</a>
         <br />
         <span id='bodyCount' style='font-size:12px'></span>
         <br />
