--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@
             primary.scale(1/10000, 1/10000);
             */
             primary.fillStyle = '#000';
-            primary.fillRect(0, 0, 1300/* * 1000 */, 600/* * 1000 */);
+            primary.fillRect(0, 0, 1300/* * 1000 */, 1200/* * 1000 */);
             /*
             for (var i = 100; i--;) {
                 primary.setTransform(1, 0, 0, 1, 0, 0);
@@ -59,12 +59,14 @@
             zdeg = 0;
             //drawLines(primary);
             bodies = [];
-            for (var i = 100; i--;) {
-                bodies[i] = {0:[randInt(1200), randInt(1200), randInt(1200)], c:'rgb(' + randInt(255) + ',' + randInt(255) + ',' + randInt(255) + ')'};
+            for (var i = 50; i--;) {
+                bodies[i] = {0:[randInt(1200), -600 + randInt(1200), randInt(300)], c:'rgb(' + (125 + randInt(125)) + ',' + (125 + randInt(125)) + ',' + (125 + randInt(125)) + ')', np:[], scale:0, i:i};
             }
-            console.log(bodies[0][0]);
+            bodies[bodies.length] = {0:[0,0,0], c:'rgb(255,255,255)', np:[], scale:0, i:100};
+            pause = false;
             drawBodies(primary);
             document.onkeypress = pageEvents;
+            setTimeout(function() {drawBodies(primary);}, 16);
         };
         function pageEvents(ev) {
             var ekey = ev.which;
@@ -85,28 +87,86 @@
                 origin[2] -= 10;
                 zadd -= 10;
             }
+            if (ekey == 101) {
+                pause = !pause;
+                if (!pause) {
+                    drawBodies(primary);
+                }
+            }
             //drawLines(primary);
-            drawBodies(primary);
+            drawBodies(primary, true);
         }
-        function drawBodies(primary) {
+        function drawBodies(primary, dotime) {
             primary.fillStyle = '#000';
-            primary.fillRect(0,0,1300,600);
+            primary.fillRect(0,0,1300,1200);
             //bodies.sort(comparez);
             var position2, position1;
             for (var i = bodies.length; i--;) {
+                /*
+                // code from altered qualia
+                var col1 = Math.round(255*(position[1]+zadd-200)/400);
+                if (col1 < 0) {col1 = 0};
+                if (col1 > 255) {col1 = 255;};
+                //console.log(scale);
+                var half = (0.5+col1/512) * 10;
+                var size = 2*half;
+                
+                var grad = primary.createRadialGradient((position[0]-half+size*0.1) + 300, (position[2]-half+size*0.2) + 150,size*0.15, position[0] + 300, position[2] + 150, half);
+                grad.addColorStop(0,  bodies[i].c);
+                grad.addColorStop(0.95, 'rgba(0,0,0,1.0)');
+                grad.addColorStop(1, 'rgba(0,0,0,0.0)');
+                primary.fillStyle = grad;
+                primary.fillRect(position[0] - half + 300, position[2] - half + 150, size, size);
+                */
+
                 var position = bodies[i][0].rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
                 //console.log(position);
-                var scale = (600+position[1]+zadd)/600;
-                //console.log(scale);
+                var scale = (1200+position[1]+zadd)/1200;
+                bodies[i].np = position;
+                bodies[i].scale = scale;
+                /*
+                var radius = 10/scale;
                 if (scale > 0) {
                     position = position.scale(scale);
-                    drawBody(position[0]+600, position[2]+300, 10/scale, bodies[i].c, primary);
+                    // zfront is the z-plane front
+                    // zback is the z-plane back
+                    // zrange is zfront - zback
+                    var grad = primary.createRadialGradient(position[0]+600, position[2]+300, 0.15*radius/scale, position[0]+600, position[2]+300, radius);
+                    grad.addColorStop(0, bodies[i].c);
+                    grad.addColorStop(0.95, 'rgba(0,0,0,1.0)');
+                    grad.addColorStop(1, 'rgba(0,0,0,0.0)');
+                    primary.fillStyle = grad;
+                    primary.fillRect(position[0]+600-(radius), position[2]+300-(radius), 2*radius, 2*radius);
+                    //drawBody(position[0]+600, position[2]+300, radius, bodies[i].c, primary);
+                }
+                */
+            }
+            if (pause) {console.log(bodies[0].i);}
+            bodies.sort(function(a,b) {return b[0][1]-a[0][1]});
+            if (pause) {console.log(bodies[0].i);}
+            for (var i = bodies.length; i--;) {
+                var position = bodies[i].np;
+                var scale = bodies[i].scale;
+                if (scale > 0) {
+                    position = position.scale(scale);
+                    var radius = 10/scale;
+                    // zfront is the z-plane front
+                    // zback is the z-plane back
+                    // zrange is zfront - zback
+                    var grad = primary.createRadialGradient(position[0]+600, position[2]+300, 0.15*radius/scale, position[0]+600, position[2]+300, radius);
+                    grad.addColorStop(0, bodies[i].c);
+                    grad.addColorStop(0.95, 'rgba(0,0,0,1.0)');
+                    grad.addColorStop(1, 'rgba(0,0,0,0.0)');
+                    primary.fillStyle = grad;
+                    primary.fillRect(position[0]+600-(radius), position[2]+300-(radius), 2*radius, 2*radius);
+                    //drawBody(position[0]+600, position[2]+300, radius, bodies[i].c, primary);
                 }
             }
             otherDrawing(primary);
-        }
-        function comparez(a,b) {
-            return (a[0][1]-b[0][1]);
+            if (!dotime && !pause) {
+                zdeg += 1/36;
+                setTimeout(function() {drawBodies(primary);}, 64);
+            }
         }
         function drawLines(primary) {
             var x2vect = xvect.add(origin).rotatex(xdeg).rotatey(ydeg).rotatez(zdeg);
@@ -143,6 +203,7 @@
             otherDrawing(primary);
         }
         function otherDrawing(primary) {
+            /*
             var gradient1 = primary.createLinearGradient(100,100,200,100);
             gradient1.addColorStop(0, '#ff0');
             gradient1.addColorStop(0.5, '#000');
@@ -157,6 +218,7 @@
             gradientr.addColorStop(1, 'rgba(0,255,255,0)');
             primary.fillStyle = gradientr;
             primary.fillRect(0,0,1300,600);
+            */
         }
         function drawLine(x, y, oldx, oldy, radius, color, paper) {
             paper.lineWidth = .2*radius;
@@ -180,10 +242,12 @@
             paper.stroke();
             paper.fill();
         }
+        function drawRadialGradient(x1, y1, r1, x2, y2, r2, stops, paper) {
+        }
     </script>
 </head>
 <body>
-<canvas id='primary' width='1300' height='600'></canvas>
+<canvas id='primary' width='1300' height='1200'></canvas>
 <canvas id='secondary' width='1300' height='600'></canvas>
 </body>
 </html>
