commit old changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Grav - Canvas</title>
-    <script type='text/javascript' src='grav-runge-kutta.js'></script>
+    <script type='text/javascript' src='experiment.js'></script>
+    <script type='text/javascript' src='Three.js'></script>
     <style>h3 {color:#ccf;}</style>
 </head>
 <body style='background-color:#000; color:#fff'>
