--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <select id='choosebody' style='width: 100px; background-color:#000; color:#fff; border:0 none;'>
             <option value='0'>Solar System</option>
             <option value='1'>Two-Body System</option>
+	    <option value='21'>Sun-Jupiter System</option>
             <option value='2'>Four-Body System</option>
             <option value='3'>Gliese 876 System</option>
             <option value='4'>55 Cancri System</option>
@@ -55,6 +56,7 @@
         <p><u>T</u>race, <u>L</u>ess, <u>M</u>ore</p>
         <p><u>F</u>licker: <span id='flicker'>On</span></p>
         <p><u>B</u>ounce: <span id='bounce'>On</span></p>
+	<p><u>R</u>otate: <span id='rotating'>Off</span></p>
         <p>Show/Hide: Q</p>
     </div>
     <canvas id='canvas' width='1300' height='600' style='border:1px solid #050505;position:absolute;top:0;left:0;'>
